--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/park.jpg">
-                        <img src="../images/park.jpg" alt="Park">
+                        <img src="../images/1.jpg" alt="Park">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -41,7 +41,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/bridge.jpg">
-                        <img src="../images/bridge.jpg" alt="Bridge">
+                        <img src="../images/2.jpg" alt="Bridge">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -52,7 +52,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/tunnel.jpg">
-                        <img src="../images/tunnel.jpg" alt="Tuneel">
+                        <img src="../images/3.jpg" alt="Tuneel">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -63,7 +63,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/coast.jpg">
-                        <img src="../images/coast.jpg" alt="Coast">
+                        <img src="../images/4.jpg" alt="Coast">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -74,7 +74,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/rails.jpg">
-                        <img src="../images/rails.jpg" alt="Rails">
+                        <img src="../images/5.jpg" alt="Rails">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -85,7 +85,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="../images/traffic.jpg">
-                        <img src="../images/traffic.jpg" alt="Traffic">
+                        <img src="../images/6.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
