--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/park.jpg">
+                    <a class="lightbox" href="../images/1.jpg">
                         <img src="../images/1.jpg" alt="Park">
                     </a>
                     <div class="caption">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/bridge.jpg">
+                    <a class="lightbox" href="../images/2.jpg">
                         <img src="../images/2.jpg" alt="Bridge">
                     </a>
                     <div class="caption">
@@ -51,7 +51,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/tunnel.jpg">
+                    <a class="lightbox" href="../images/3.jpg">
                         <img src="../images/3.jpg" alt="Tuneel">
                     </a>
                     <div class="caption">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/coast.jpg">
+                    <a class="lightbox" href="../images/4.jpg">
                         <img src="../images/4.jpg" alt="Coast">
                     </a>
                     <div class="caption">
@@ -73,7 +73,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/rails.jpg">
+                    <a class="lightbox" href="../images/5.jpg">
                         <img src="../images/5.jpg" alt="Rails">
                     </a>
                     <div class="caption">
@@ -84,7 +84,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/traffic.jpg">
+                    <a class="lightbox" href="../images/6.jpg">
                         <img src="../images/6.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
