--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Michael Yu Photo Album</title>
+    <title>Eric Photo Album</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
@@ -19,9 +19,9 @@
 
 <div class="container gallery-container">
 
-    <h1>Michael Yu Photo Album</h1>
+    <h1>Eric Photo Album</h1>
 
-    <p class="page-description text-center">...</p>
+    <p class="page-description text-center">by MY</p>
     
     <div class="tz-gallery">
 
@@ -29,8 +29,8 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/1.jpg">
-                        <img src="../images/1.jpg" alt="Park">
+                    <a class="lightbox" href="../images/1a.jpg">
+                        <img src="../images/1a.jpg" alt="Park">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -40,8 +40,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/2.jpg">
-                        <img src="../images/2.jpg" alt="Bridge">
+                    <a class="lightbox" href="../images/2a.jpg">
+                        <img src="../images/2a.jpg" alt="Bridge">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -51,8 +51,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/3.jpg">
-                        <img src="../images/3.jpg" alt="Tuneel">
+                    <a class="lightbox" href="../images/3a.jpg">
+                        <img src="../images/3a.jpg" alt="Tuneel">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -62,8 +62,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/4.jpg">
-                        <img src="../images/4.jpg" alt="Coast">
+                    <a class="lightbox" href="../images/4a.jpg">
+                        <img src="../images/4a.jpg" alt="Coast">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -73,8 +73,9 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/5.jpg">
-                        <img src="../images/5.jpg" alt="Rails">
+                    <a class="lightbox" href="../images/5a.jpg">
+                        <img src="../images/5a.jpg" alt="Rails">
+
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
@@ -84,8 +85,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/6.jpg">
-                        <img src="../images/6.jpg" alt="Traffic">
+                    <a class="lightbox" href="../images/6a.jpg">
+                        <img src="../images/6a.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
