--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,8 +33,8 @@
                         <img src="../images/1a.jpg" alt="Park">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
@@ -44,8 +44,8 @@
                         <img src="../images/2a.jpg" alt="Bridge">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                         <img src="../images/3a.jpg" alt="Tuneel">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
@@ -66,8 +66,8 @@
                         <img src="../images/4a.jpg" alt="Coast">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
@@ -78,8 +78,8 @@
 
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                         <img src="../images/6a.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Eric</h3>
+                        <p>cuteeee !</p>
                     </div>
                 </div>
             </div>
